2019-04-17      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/bnf/m2-2.bnf:  replaced ErrorStringAt with MetaErrorStringT0
	  for GCC colorization.
	* gm2/bnf/m2.bnf:    replaced ErrorStringAt with MetaErrorStringT0
	  for GCC colorization.
	* gm2/gm2-compiler/M2MetaError.def:  added root, chain and color
	  directives.
	* gm2/gm2-compiler/M2MetaError.mod:  added root, chain and color
	  directives.  Applied many fixes.
	* gm2/gm2-compiler/ppg.mod:  added keyword directives to error messages.

2019-04-16      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/M2ColorString.def:  rewritten.
	* gm2/gm2-compiler/M2ColorString.mod:  rewritten.
	* gm2/gm2-compiler/M2Error.def:  New procedures (NewNote) and (SetColor).
	* gm2/gm2-compiler/M2Error.mod:  New procedures (NewNote) and
          (SetColor) implemented.  Also enable colors in legacy error messages.
	* gm2/gm2-compiler/M2MetaError.def:  added {%O}, {%K} %< and %>.
	* gm2/gm2-compiler/M2MetaError.mod:  implemented {%O}, %< and
          %> and fixed many bugs.
	* gm2/gm2-compiler/SymbolTable.mod:  rewritten undefined symbol error
          messages to use M2MetaError.
	* gm2/Make-lang.in:  make ppg use the -k option.
	* gm2/gm2-compiler/M2GenGCC.mod:  use MetaError and simplify the
          error reporting.
	* gm2/gm2-compiler/M2MetaError.def:  correct comments.
	* gm2/gm2-compiler/M2MetaError.mod:  handle the keyword and
          default all messages to the error color.
	* gm2/gm2-compiler/SymbolTable.mod:  use MetaError and tidied up
	  UndeclaredSymbolError and callees.
	* gm2/gm2-compiler/ppg.mod:  implement the -k option to generate
	  GCC error formatting directives.

2019-04-14      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* gm2/gm2-compiler/CLexBuf.def:  added summary and dates for GPL.
	* gm2/gm2-compiler/CLexBuf.mod:  added summary and dates for GPL.
	* gm2/gm2-compiler/FifoQueue.def:  added summary and dates for GPL.