@@ -105,6 +105,8 @@ DEFINE_LANG_NAME ("Modula-2")
       N_("display statistics about the amount of source lines compiled and symbols used") },
   { "-fm2-g",
       N_("generate extra nops to improve debugging, producing an instruction for every code related keyword") },
+  { "-fm2-lower-case",
+      N_("generate error messages which render keywords in lower case") },
   { "-fmodules",
       N_("display list of modules and location") },
   { "-fno-pth",
